--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -324,11 +324,13 @@ ul {
 }
 
 .card-image {
+  object-fit: cover;
   /* background-color: rgb(236, 236, 236); */
-  background-image:url(./images/asd.png) ;
-  width: 100%;
+  /* background-image:url(./images/asd.png) ; */
+  /* width: 100%; */
   height: 130px;
-  border-radius: 6px 6px 0 0;
+  /* border-radius: 6px 6px 0 0; */
+  border-radius: 1px solid black;
 }
 
 .card-image:hover {
@@ -419,10 +421,7 @@ ul {
 
 /* SKILLS */
 
-.sk1
-{
 
-}
 
 .nwskl{
   /* justify-center text-center */
