--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -385,3 +385,15 @@ ul {
   /* align-items: center !important; */
   text-align: center !important;
 }
+
+.pro{
+
+  /* margin-left: 8%; */
+  /* margin-right: 6%; */
+  /* padding: auto; */
+  padding-left: 11.5%;
+  padding-right: 6%;
+
+
+  /* width: 80% !important; */
+}
