--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+
+/* Positioning and layering */
+position: absolute;
+inset: 0;
+z-index: -10;
+height: 100%;
+width: 100%;
+
+/* Background color */
+background-color: white;
+
+/* Background gradient */
+background-image: 
+  linear-gradient(to right, rgba(128, 128, 128, 0.04) 1px, transparent 1px),
+  linear-gradient(to bottom, rgba(128, 128, 128, 0.04) 1px, transparent 1px);
+background-size: 14px 24px;
+
+}
