--- a/src/index.css
+++ b/src/index.css
@@ -20,4 +20,10 @@ background-image:
   linear-gradient(to bottom, rgba(128, 128, 128, 0.04) 1px, transparent 1px);
 background-size: 14px 24px;
 
+
+
+
+
+
+scrollbar-color: rgb(25);
 }
