--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -400,3 +400,8 @@ ul {
 
   /* width: 80% !important; */
 }
+
+.sklshdo{
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  background-color: white;
+}
