--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -1,3 +1,10 @@
+
+
+
+
+
+
+
 @media screen and (max-width: 768px) {
   #nav {
     display: none;
@@ -24,14 +31,14 @@
   display: none !important; 
   height: 60px;
  }
- @media screen and (max-width : 1010px){
+ /* @media screen and (max-width : 1010px){
 .scroll{
   display: none;
 }
 #sclop{
   display: none;
 }
- }
+ } */
 
 @media  (min-width: 300px) and (max-width : 768px){
 
