--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -447,7 +447,7 @@ ul {
 
 /* Navbar.css */
 .navbar {
-  z-index: 1000;
+  z-index: 1000 !important;
   /* width: 99%; */
   /* margin-left: 3%; */
   width: 250px;
