--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -105,6 +105,10 @@
 }
 
 @media (min-width: 300px) and (max-width: 768px) {
+  .herosec{
+    justify-content: center !important;
+    margin-left: -23px !important;
+  }
   .zin {
     z-index: 1004;
   }
