--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -107,7 +107,8 @@
 @media (min-width: 300px) and (max-width: 768px) {
   .herosec{
     justify-content: center !important;
-    margin-left: -24px !important;
+    align-items: center !important;
+    margin-left: -21.9px !important;
   }
   .zin {
     z-index: 1004;
