--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -306,6 +306,7 @@ ul {
   justify-content: center;
   align-items: center;
   margin-top: -66px;
+  margin-bottom: -15px;
 }
 .example-2 .icon-content {
   margin: 0 10px;
